--- a/notifications/config.json
+++ b/notifications/config.json
@@ -1,18 +1,16 @@
 {
   "base": {
-    "project": "QA Guru HW13",
-    "environment": "qa.guru",
-    "comment": "Домашнее задание 13",
+    "project": "Local Project",
+    "environment": "Home",
+    "comment": "Комментарий здесь",
     "reportLink": "",
     "language": "ru",
-    "allureFolder": "C:/Users/RUSfi/IdeaProjects/qaGuru32/HW13_AllureReport_TelegramBot/build/reports/allure-report/allureReport",
-    "enableChart": true,
-    "enableSuitesPublishing": false,
-    "customData": {}
+    "allureFolder": "build/allure-report/",
+    "enableChart": true
   },
   "telegram": {
     "token": "7727371398:AAEEI4xT8Do-6t9Pq0CN9BgbPviSBUMnvzw",
-    "chat": "94601299",
+    "chat": "-1002408231622",
     "replyTo": "",
     "templatePath": "/templates/telegram.ftl"
   }
